sdk_tests/tests/read-write-macro-fail/state_enum_duplicate_discriminants.stderr
error[E0081]: discriminant value `1` assigned more than once
 --> tests/read-write-macro-fail/state_enum_duplicate_discriminants.rs:6:1
  |
6 | enum MyEnum {
  | ^^^^^^^^^^^
7 |     Good = 0,
8 |     Bad = 1,
  |           - `1` assigned here
9 |     Neutral = 1,
  |               - `1` assigned here
